Bug 1701863 - Provide default value when using wr::SurfaceFormatToImageFormat r=gfx-reviewers,bradwerth

The function may return `Nothing()` - handle that case more gracefully.

Differential Revision: https://phabricator.services.mozilla.com/D114958